# NearconVoting

./: .gitignore  package-lock.json  package.json
contract/: Cargo.toml  tree.buf
contract/circuits/: circuit.circom  compile-circuits.sh  input.json  proof.json  public.json  semaphore.circom  witness.wtns
contract/neardev/: dev-account  dev-account.env
contract/semaphore/: compile-semaphore.sh  package-lock.json  package.json  semaphore.circom  tree.circom
contract/src/: lib.rs  semaphore.rs
contract/src/semaphore/: field.rs  util.rs
contract/tests/: electron.rs  semaphore.rs
frontend/: App.js  index.js  package-lock.json  package.json
frontend/circuit/: verification_key.json
frontend/circuits/semaphore/: semaphore.wasm  semaphore_0000.zkey  verification_key.json
frontend/components/About/: index.js
frontend/components/HelloNear/: index.js  ui-components.js
frontend/components/Polls/: Poll.js  index.js
frontend/utils/: HelloNear.js  Semaphore.js
integration-tests/src/: main.ava.ts
