[package]
name = "hello_near"
version = "1.0.0"
authors = ["Near Inc <hello@near.org>"]
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
near-sdk = "4.0.0"
uint = { version = "0.9.3", default-features = false }
near-contract-standards = "*"
#semaphore-custom = { git = "https://github.com/socathie/semaphore-rs" }
electron-rs = { git = "https://github.com/Electron-Labs/electron-rs.git" }
getrandom = { version = "0.2", features = ["js"] }
serde = "*"
#semaphore = { git = "https://github.com/worldcoin/semaphore-rs" }
ruint = { version = "1.2.0", features = [ "serde", "num-bigint", "ark-ff" ] }

[dev-dependencies]
color-eyre = "0.5"
serde_json = "*"
num-bigint = "*"


[profile.release]
codegen-units = 1
opt-level = "z"
lto = true
debug = false
panic = "abort"
overflow-checks = true

[workspace]
members = []
